SimpleComplex/Database 1.x, 2018-05-01
--------------------------------------
- prepare() support associative arguments array.
- MS SQL insertId() shan't err when ID ;-)
- Better query logging.
- Sql string variables renamed to 'sql'; from 'query'.

SimpleComplex/Database 1.x, 2018-04-30
--------------------------------------
- MS SQL insertId(), and better error handling.
- Freeing result is result method, not a query method.
- Result constructor must accommodate (MySQLi) connection object as well
  as statement.
- An abstract class doesn't have to implement methods of an interface.
- insertId() must return null when query didn't trigger setting an ID.
- MariaDb result; entirely untested, and still wondering about the nature
  of non-selecting multi-queries vs. mysql_multi_query.

SimpleComplex/Database 1.x, 2018-04-24
--------------------------------------
- Clarify which methods are 'package protected'; @internal.
- Order sequence of methods in code by relevance to user.
- More exceptions must be preceded by unsetting prepared statement arguments
  reference.
- Log query in more situations. Use a random query ID to correlate log warnings
  with exceptions.

SimpleComplex/Database 1.x, 2018-04-23
--------------------------------------
- Prepared statement arguments reference unsetting problem solved by setting
  the reference on an array bucket of an instance var; instead of on the
  instance var itself.
- Err on attempt to execute() closed statement.

SimpleComplex/Database 1.x, 2018-04-22
--------------------------------------
- MS SQL client info.
- The parameter marker is now a constant; not necessarily question mark.
- Splitting query by parameter marker - and checking for parameters/arguments
  count mismatch - moved to decidated method.
- MS SQL query use automated parameter substitution even when non-prepared
  statement.
- Handle that query instance var prepared-statement-arguments is a reference,
  and that unsetting it renders the query object useless.